# offline-productivity-system

./: .env  .env.example  README.md  SETUP_GUIDE.md  index.html  package-lock.json  package.json
backend/: .env  .env.example  Cargo.toml  README.md  package.json  tsconfig.json
backend/migrations/: 001_initial.sql  002_add_google_tokens.sql
backend/src/: config.rs  database.rs  error.rs  main.rs
backend/src/handlers/: api.rs  auth.rs  mod.rs
backend/src/handlers/api/: backup.rs  habits.rs  notes.rs  sync.rs  tasks.rs
backend/src/middleware/: auth.rs
backend/src/models/: habit.rs  mod.rs  note.rs  sync_metadata.rs  task.rs  user.rs
backend/src/services/: auth.rs  google_drive.rs  jwt.rs  mod.rs  sync.rs
src/: App.tsx  vite-env.d.ts
src-tauri/: tauri.conf.json
src/components/: AppLayout.tsx  SoundTestPanel.tsx
src/components/auth/: LoginScreen.tsx
src/components/graph/: KnowledgeGraph.tsx
src/components/habits/: AddHabitForm.tsx  HabitCalendar.tsx  HabitExecution.tsx  HabitList.tsx  HabitPlan.tsx  HabitPlanner.tsx  HabitProgress.tsx  HabitTracker.tsx
src/components/notes/: EncryptionControls.tsx  MarkdownEditor.tsx  NotesGraph.tsx  NotesList.tsx
src/components/shared/: BackupManager.tsx  DataManager.tsx  FocusMode.tsx  GlobalSearch.tsx  Navigation.tsx  PomodoroTimer.tsx  Settings.tsx
src/components/ui/: sidebar.tsx
src/hooks/: use-sound.ts
src/pages/: Dashboard.tsx  Graph.tsx  Habits.tsx  Index.tsx  Notes.tsx  SoundTest.tsx  Tasks.tsx
src/services/: api.ts  auth.ts  backup.ts  encryption.ts  sound.ts  sync.ts
src/stores/: appStore.ts
(+4 files in other folders)
