[package]
name = "focusflow-backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
tokio = { version = "1.0", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for Google APIs
reqwest = { version = "0.11", features = ["json", "rustls-tls", "multipart"] }

# Authentication & Security
oauth2 = "4.4"
jsonwebtoken = "9.2"
bcrypt = "0.15"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Base64 encoding for file handling
base64 = "0.22"

# Async traits
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
